--- a/test/html/Genesis1:1.html
+++ b/test/html/Genesis1:1.html
@@ -1,3 +1,13 @@
-<h2 class="extra_text">Genesis 1:1 <small class="audio extra_text">(<a class="mp3link" href="https://audio.esv.org/david-cochran-heath/mq/01001001-01001001.mp3" title="Genesis 1:1" type="audio/mpeg">Listen</a>)</small></h2>
-<p id="p01001001_06-1" class="starts-chapter"><b class="chapter-num" id="v01001001-1">1:1&nbsp;</b>In the beginning, God created the heavens and the earth.</p>
-<p>(<a href="http://www.esv.org" class="copyright">ESV</a>)</p>
+<h2 class="extra_text">Genesis 1:1
+    <br></br>
+    <small class="audio extra_text">
+        <audio src="https://audio.esv.org/david-cochran-heath/mq/01001001-01001001.mp3" autoplay loop controls type="audio/mpeg" id="esv audio"></audio>
+    </small>
+</h2>
+<p id="p01001001_06-1" class="starts-chapter">
+    <b class="chapter-num" id="v01001001-1">1:1&nbsp;</b>
+    In the beginning, God created the heavens and the earth.
+</p>
+<p>
+    (<a href="http://www.esv.org" class="copyright">ESV</a>)
+</p>
